[package]
name = "lmrs"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio"]

[dependencies]
wide = "0.7.28"
memmap2 = "0.9.4"
rayon = "1.10.0"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }

tokio-tungstenite = { version = "0.23.1", optional = true }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"], optional = true }
tokio = { version = "1.0.0", features = ["full"], optional = true }
wgpu = "22.1.0"
flume = "0.11.0"
bytemuck = "1.19.0"
pollster = "0.3.0"
env_logger = "0.11.5"
log = "0.4.22"

[[bin]]
name = "backend"
required-features = ["backend"]

[profile.release]
codegen-units = 1
lto = true
